--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -272,7 +272,8 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"image/slide_navigation/img3.jpg"
+					"image/slide_navigation/img3.jpg",
+					"js/main/slide_navigation.js"
 				],
 				"refer": [],
 				"priority": 0
