--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -274,7 +274,8 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"image/slide_navigation/img3.jpg",
-					"js/main/slide_navigation.js"
+					"js/main/slide_navigation.js",
+					"css/home/index-menu.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -303,5 +304,5 @@
 				"image/clip.png"
 			]
 		}
-	}
+	},"fullscreen":false
 }
