--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -207,7 +207,8 @@
 				"refer": [
 					"html/tab_knowledge.html",
 					"html/tab_clip.html",
-					"html/index-menu.html"
+					"html/index-menu.html",
+					"html/clip/clip_main.html"
 				],
 				"priority": 0
 			},
@@ -281,6 +282,21 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"html/clip/clip_main.html": {
+				"resources": [
+					"js/mui.js",
+					"html/clip/clip_sub.html"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/clip/clip_sub.html": {
+				"resources": [
+					"js/utils/carouselControl.js"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
@@ -293,7 +309,6 @@
 				"image/zone_sel.png",
 				"js/utils/textarea.js",
 				"css/utils/imgeControl.css",
-				"js/utils/carouselControl.js",
 				"css/mui.css",
 				"css/utils/textarea.css",
 				"css/utils/documents.css",
@@ -301,7 +316,6 @@
 				"css/utils/mui.indexedlist.css",
 				"image/cloud_sel.png",
 				"css/utils/searchbar.css",
-				"js/mui.js",
 				"image/cloud.png",
 				"image/clip.png"
 			]
