--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -204,14 +204,16 @@
 					"js/main/slide_navigation.js",
 					"html/tab_cloud.html",
 					"css/iconfont/iconfont.css",
-					"fonts/iconfont.ttf"
+					"fonts/iconfont.ttf",
+					"html/zone_sub.html"
 				],
 				"refer": [
 					"html/tab_knowledge.html",
 					"html/tab_clip.html",
 					"html/index-menu.html",
 					"html/clip/clip_main.html",
-					"html/clip/clip_sub.html"
+					"html/clip/clip_sub.html",
+					"html/cloud/cloud_sub.html"
 				],
 				"priority": 0
 			},
@@ -318,9 +320,13 @@
 					"css/home/zone.css",
 					"js/mui.min.js",
 					"css/mui.min.css",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"js/utils/events.js",
+					"js/main/slide_navigation.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/quan/class-space.html"
+				],
 				"priority": 0
 			},
 			"html/cloud/cloud_main.html": {
@@ -328,7 +334,10 @@
 					"image/cloud/cloud_download.gif",
 					"image/cloud/cloud_upload.gif",
 					"html/cloud/cloud_sub.html",
-					"image/cloud/cloud_add.png"
+					"image/cloud/cloud_add.png",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"css/utils/common.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -343,7 +352,22 @@
 					"js/cloud/cloud.js",
 					"image/cloud/cloud_video.png",
 					"image/cloud/cloud_zip.png",
-					"image/cloud/cloud_xls.png"
+					"image/cloud/cloud_xls.png",
+					"fonts/mui.ttf"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/quan/class-space.html": {
+				"resources": [
+					"fonts/mui.ttf",
+					"css/quan/class_space.css",
+					"css/iconfont/iconfont.css",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"fonts/iconfont.ttf",
+					"css/utils/common.css",
+					"js/utils/events.js"
 				],
 				"refer": [],
 				"priority": 0
