--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -326,7 +326,8 @@
 				],
 				"refer": [
 					"html/quan/class-space.html",
-					"html/quan/zone_main.html"
+					"html/quan/zone_main.html",
+					"html/quan/class_space.html"
 				],
 				"priority": 0
 			},
@@ -393,6 +394,19 @@
 					"js/quan/dynamiclistitem.js",
 					"image/dynamic/icon_Level39.png",
 					"image/dynamic/u101.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/quan/class_space.html": {
+				"resources": [
+					"css/iconfont/iconfont.css",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"css/mui.min.css",
+					"fonts/iconfont.ttf",
+					"css/utils/common.css"
 				],
 				"refer": [],
 				"priority": 0
