--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -420,7 +420,9 @@
 					"css/quan/class_space.css",
 					"html/quan/class-dynamic.html"
 				],
-				"refer": [],
+				"refer": [
+					"html/quan/class-group.html"
+				],
 				"priority": 0
 			},
 			"html/quan/classSpace-sub.html": {
@@ -495,12 +497,43 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"html/quan/class-group.html": {
+				"resources": [
+					"image/quan/group/u227.png",
+					"js/utils/grideControl.js",
+					"image/quan/group/u165.png",
+					"image/quan/group/u237.png",
+					"image/quan/group/u217.png",
+					"image/quan/group/u173.png",
+					"image/quan/group/u213.png",
+					"image/quan/group/u241.png",
+					"image/quan/group/u177.png",
+					"image/quan/group/u191.png",
+					"image/quan/group/u219.png",
+					"image/quan/group/u233.png",
+					"image/quan/group/u231.png",
+					"image/quan/group/u189.png",
+					"js/mui.min.js",
+					"image/quan/group/u205.png",
+					"image/quan/group/u201.png",
+					"image/quan/group/u209.png",
+					"image/quan/group/u169.png",
+					"image/quan/group/u181.png",
+					"image/quan/group/u223.png",
+					"image/quan/group/u195.gif",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/utils/common.css",
+					"css/quan/class_space.css"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
 			"resources": [
 				"image/zone.png",
-				"js/utils/grideControl.js",
 				"image/knowledge_sel.png",
 				"image/knowledgr.png",
 				"js/utils/constantScreen.js",
