--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -567,7 +567,8 @@
 				],
 				"refer": [
 					"html/quan/studentdynamic_main.html",
-					"html/quan/class_space.html"
+					"html/quan/class_space.html",
+					"html/quan/zone_main.html"
 				],
 				"priority": 0
 			},
