--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "html/index.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+	"launch_path": "html/knowledge/test.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -589,6 +589,22 @@
 					"css/utils/common.css",
 					"js/mui.min.js",
 					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/knowledge/test.html": {
+				"resources": [
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"libs/crypto-js-3.1.8/crypto-js.js",
+					"libs/crypto-js-3.1.8/hmac-sha1.js",
+					"libs/require/require.js",
+					"libs/crypto-js-3.1.8/require.js",
+					"js/mui.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/crypto-js/mui.js",
+					"js/libs/crypto-js/crypto-js.js"
 				],
 				"refer": [],
 				"priority": 0
