--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -588,7 +588,8 @@
 					"image/cloud/cloud_folder.png",
 					"css/utils/common.css",
 					"js/mui.min.js",
-					"css/mui.min.css"
+					"css/mui.min.css",
+					"js/utils/events.js"
 				],
 				"refer": [],
 				"priority": 0
