发布作业界面框架

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -681,7 +681,8 @@
 					"css/mui.min.css",
 					"css/homework/homework.css",
 					"css/iconfont/iconfont.css",
-					"fonts/iconfont.ttf"
+					"fonts/iconfont.ttf",
+					"js/utils/events.js"
 				],
 				"refer": [],
 				"priority": 0
