--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -682,7 +682,8 @@
 					"css/homework/homework.css",
 					"css/iconfont/iconfont.css",
 					"fonts/iconfont.ttf",
-					"js/utils/events.js"
+					"js/utils/events.js",
+					"html/homework/homework-publish.html"
 				],
 				"refer": [],
 				"priority": 0
@@ -695,6 +696,21 @@
 					"js/utils/events.js",
 					"css/iconfont/iconfont.css",
 					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"fonts/iconfont.ttf",
+					"css/utils/common.css"
+				],
+				"refer": [
+					"html/homework/homework-publish.html"
+				],
+				"priority": 0
+			},
+			"html/homework/homework-publish.html": {
+				"resources": [
+					"css/homework/publish-work.css",
+					"fonts/mui.ttf",
+					"css/iconfont/iconfont.css",
+					"js/mui.min.js",
 					"css/mui.min.css",
 					"fonts/iconfont.ttf",
 					"css/utils/common.css"
