--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -593,7 +593,8 @@
 					"fonts/mui.ttf"
 				],
 				"refer": [
-					"html/homework/homework-tea.html"
+					"html/homework/homework-tea.html",
+					"html/homework/homework-stu.html"
 				],
 				"priority": 0
 			},
@@ -714,6 +715,33 @@
 					"css/mui.min.css",
 					"fonts/iconfont.ttf",
 					"css/utils/common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/homework/homework-stu.html": {
+				"resources": [
+					"css/homework/homework.css",
+					"css/iconfont/iconfont.css",
+					"html/homework/homework-stu-sub.html",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"css/mui.min.css",
+					"fonts/iconfont.ttf",
+					"css/utils/common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/homework/homework-stu-sub.html": {
+				"resources": [
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"css/homework/homework.css",
+					"css/iconfont/iconfont.css",
+					"fonts/iconfont.ttf"
 				],
 				"refer": [],
 				"priority": 0
