--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "html/register/login.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+	"launch_path": "html/index.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -653,10 +653,18 @@
 					"js/libs/RSA/Barrett.js",
 					"js/libs/RSA/RSA.js",
 					"js/libs/RSA/MD5.js",
-					"js/libs/myStorage/myStorage.js"
+					"js/libs/myStorage/myStorage.js",
+					"js/utils/events.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/crypto-js/crypto-js.js",
+					"js/utils/sortSign.js",
+					"js/utils/signHmacSHA1.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [
-					"html/register/register_phoneNumber.html"
+					"html/register/register_phoneNumber.html",
+					"html/register/modify_password.html"
 				],
 				"priority": 0
 			},
@@ -742,7 +750,30 @@
 					"css/homework/homework.css",
 					"css/iconfont/iconfont.css",
 					"fonts/iconfont.ttf",
-					"js/utils/events.js"
+					"js/utils/events.js",
+					"html/homework/workstu-err.html"
+				],
+				"refer": [
+					"html/homework/homework-record.html"
+				],
+				"priority": 0
+			},
+			"html/homework/workstu-err.html": {
+				"resources": [
+					"fonts/mui.ttf",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"css/utils/common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/homework/homework-record.html": {
+				"resources": [
+					"fonts/mui.ttf",
+					"css/utils/common.css",
+					"js/mui.min.js",
+					"css/mui.min.css"
 				],
 				"refer": [],
 				"priority": 0
