--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -275,7 +275,8 @@
 					"image/knowledge/u212.png",
 					"image/knowledge/u270.png",
 					"css/utils/bubble.css",
-					"css/knowledge/knowledge.css"
+					"css/knowledge/knowledge.css",
+					null
 				],
 				"refer": [
 					"html/index-menu.html"
@@ -680,7 +681,14 @@
 					"js/libs/RSA/Barrett.js",
 					"js/libs/RSA/RSA.js",
 					"js/libs/RSA/MD5.js",
-					"js/libs/myStorage/myStorage.js"
+					"js/libs/myStorage/myStorage.js",
+					"js/storageKeyName.js",
+					"js/libs/crypto-js/require.js",
+					"html/register/js/mui.enterfocus.js",
+					"js/utils/sortSign.js",
+					"js/utils/signHmacSHA1.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
