学生作业选项卡

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "html/register/login.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+	"launch_path": "html/homework/workdetail-tea-sub.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -793,6 +793,19 @@
 					"css/utils/common.css",
 					"js/mui.min.js",
 					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/homework/workdetail-tea-sub.html": {
+				"resources": [
+					"js/mui.min.js",
+					"js/utils/events.js",
+					"js/homework/homework_detail.js",
+					"css/mui.min.css",
+					"css/homework/workdetail.css",
+					"fonts/mui.ttf",
+					"css/utils/common.css"
 				],
 				"refer": [],
 				"priority": 0
