--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -949,7 +949,9 @@
 				],
 				"refer": [
 					"html/mine/account-info.html",
-					"html/mine/group-info.html"
+					"html/mine/group-info.html",
+					"html/mine/qun_manage.html",
+					"html/mine/qun_data.html"
 				],
 				"priority": 0
 			},
@@ -1134,7 +1136,38 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"js/libs/crypto-js/crypto-js.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/mine/qun_manage_info.html": {
+				"resources": [
+					"js/utils/camera.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/mine/qun_manage.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"css/mui.min.css",
+					"css/utils/common.css"
+				],
+				"refer": [
+					"html/mine/qun_manage_info.html"
+				],
+				"priority": 0
+			},
+			"html/mine/qun_data.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/utils/common.css"
 				],
 				"refer": [],
 				"priority": 0
